sprint-2: add tenant persistence + admin auth foundations

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,10 @@ terraform.rc
 data/
 tmp/
 
+# Local-only secrets / keystores (must never be committed)
+.local/
+.local/**
+
 # --- Environment files (never commit secrets) ---
 .env
 .env.*
