--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,20 @@
           </execution>
         </executions>
       </plugin>
+
+      <!-- Ensure integration tests named *IT.java run as part of mvn test -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.5.4</version>
+        <configuration>
+          <includes>
+            <include>**/*Test.java</include>
+            <include>**/*Tests.java</include>
+            <include>**/*IT.java</include>
+          </includes>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
