--- a/services/admin-service/src/main/resources/application.yml
+++ b/services/admin-service/src/main/resources/application.yml
@@ -5,6 +5,23 @@ spring:
   application:
     name: admin-service
 
+  datasource:
+    url: ${ADMIN_DB_URL:jdbc:postgresql://localhost:5432/agenttrust}
+    username: ${POSTGRES_USER:agenttrust}
+    password: ${POSTGRES_PASSWORD:agenttrust}
+    driver-class-name: org.postgresql.Driver
+
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
+
+  jpa:
+    open-in-view: false
+    hibernate:
+      ddl-auto: none
+    properties:
+      hibernate.jdbc.time_zone: UTC
+
 management:
   endpoints:
     web:
@@ -24,3 +41,11 @@ management:
 logging:
   level:
     root: INFO
+
+agenttrust:
+  tenancy:
+    platform-tenant-id: "__platform__"
+
+  auth:
+    jwt:
+      ttl-seconds: 900 # 15 minutes
