gateway verify endpoint + attestation client + host tenancy mapping

--- a/services/gateway-service/src/main/resources/application.yml
+++ b/services/gateway-service/src/main/resources/application.yml
@@ -24,3 +24,12 @@ management:
 logging:
   level:
     root: INFO
+
+agenttrust:
+  gateway:
+    tenancy:
+      host-to-tenant:
+        # Local/dev mapping. Replace with your real merchant hostnames later.
+        merchant.local: "__platform__"
+    attestation:
+      base-url: "http://attestation-service:8082"
