--- a/infra/docker-compose/docker-compose.yml
+++ b/infra/docker-compose/docker-compose.yml
@@ -38,28 +38,20 @@ services:
     ports:
       - "9092:9092"
     environment:
-      # Single-node KRaft (combined broker+controller)
       KAFKA_NODE_ID: "1"
       KAFKA_PROCESS_ROLES: "broker,controller"
-
-      # Two listeners: one for containers (PLAINTEXT), one for host (PLAINTEXT_HOST)
       KAFKA_LISTENERS: "PLAINTEXT://:19092,PLAINTEXT_HOST://:9092,CONTROLLER://:9093"
       KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://kafka:19092,PLAINTEXT_HOST://localhost:9092"
-
       KAFKA_INTER_BROKER_LISTENER_NAME: "PLAINTEXT"
       KAFKA_CONTROLLER_LISTENER_NAMES: "CONTROLLER"
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT"
       KAFKA_CONTROLLER_QUORUM_VOTERS: "1@kafka:9093"
-
-      # Dev-friendly single-node factors
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: "1"
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: "1"
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: "1"
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: "0"
       KAFKA_NUM_PARTITIONS: "1"
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: "false"
-
-      # Keep RAM low for 8GB machines
       KAFKA_HEAP_OPTS: "-Xms256m -Xmx512m"
     healthcheck:
       test: ["CMD-SHELL", "/opt/kafka/bin/kafka-cluster.sh cluster-id --bootstrap-server :9092 1>/dev/null"]
@@ -76,13 +68,50 @@ services:
       MINIO_ROOT_USER: ${MINIO_ROOT_USER:-agenttrust}
       MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD:-agenttrust123}
     ports:
-      - "9000:9000" # S3 API
-      - "9001:9001" # Console UI
+      - "9000:9000"
+      - "9001:9001"
     volumes:
       - minio_data:/data
+    restart: unless-stopped
+
+  attestation-service:
+    image: maven:3.9.9-eclipse-temurin-21
+    container_name: agenttrust-attestation
+    working_dir: /workspace/services/attestation-service
+    volumes:
+      - ../../:/workspace
+      - maven_cache:/root/.m2
+    environment:
+      ATTESTATION_REDIS_HOST: redis
+      ATTESTATION_REDIS_PORT: 6379
+    command: ["mvn", "-q", "spring-boot:run"]
+    depends_on:
+      redis:
+        condition: service_healthy
+    restart: unless-stopped
+    # Internal-only: do NOT publish 8082 to host.
+    expose:
+      - "8082"
+
+  gateway-service:
+    image: maven:3.9.9-eclipse-temurin-21
+    container_name: agenttrust-gateway
+    working_dir: /workspace/services/gateway-service
+    volumes:
+      - ../../:/workspace
+      - maven_cache:/root/.m2
+    command: ["mvn", "-q", "spring-boot:run"]
+    depends_on:
+      attestation-service:
+        condition: service_started
+      redis:
+        condition: service_healthy
+    ports:
+      - "8080:8080"
     restart: unless-stopped
 
 volumes:
   postgres_data:
   kafka_data:
   minio_data:
+  maven_cache:
