--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,8 @@
     <module>services/gateway-service</module>
     <module>services/admin-service</module>
     <module>services/attestation-service</module>
+    <module>services/decision-service</module>
+    <module>services/token-service</module>
   </modules>
 
   <build>
